--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 .devcontainer/.docker-image-builder-archive/__owner__dtuait__project__latex-dtu-dk__image__app-main__tag__myversion-1.0.1
 .devcontainer/.docker-image-builder-archive/__owner__dtuait__project__latex-dtu-dk__image__app-main__tag__myversion-1.0.2
 app-main/output/
+.devcontainer/.docker-image-builder-archive/*/dtutemplates/*
