--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -2,10 +2,10 @@ version: '3.8'
 
 services:
   latex-dtu-dk-app-main:
-    image: dtuait/latex-dtu-dk-app-main:myversion-1.0.3
+    image: dtuait/latex-dtu-dk-app-main:myversion-1.0.4
     # build:
-    #   context: ..
-    #   dockerfile: .devcontainer/Dockerfile
+    #   context: .
+    #   dockerfile: Dockerfile
     command: bash -c "chown -R dockeruser:dockeruser /usr/src/project && /bin/bash"
     stdin_open: true  # Keep stdin open to allow interactive commands
     tty: true         # Allocate a pseudo-TTY for the container
